subindo imagen srver 2 jurere

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
     <img src="./vargem pequena/carrosel2.png" alt="">
     <img src="./vargem pequena/carrosel3.png" alt="">
     <img src="./vargem pequena/carrosel4.png" alt="">
+    <h1>jurere</h1>
+    <img src="./jurere/carrosel1.png" alt="">
+    <img src="./jurere/carrosel2.png" alt="">
+    <img src="./jurere/carrosel3.png" alt="">
+    <img src="./jurere/carrosel4.png" alt="">
     
 
 </body>
