--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
     <img src="./jurere/carrosel2.png" alt="">
     <img src="./jurere/carrosel3.png" alt="">
     <img src="./jurere/carrosel4.png" alt="">
+
+    <h1>Rota</h1>
+    <img src="./imagens geral/Rota.png" alt="">
+    <h1>home</h1>
+    <img src="./imagens geral/home.png" alt="">
+
     
 
 </body>
