adição links sonho dourado

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
     <img src="./jurere/carrosel2.png" alt="">
     <img src="./jurere/carrosel3.png" alt="">
     <img src="./jurere/carrosel4.png" alt="">
+    <h1>Sonho Dourado</h1>
+    <img src="./SonhoDourado/carrosel1.png" alt="">
+    <img src="./SonhoDourado/carrosel2.png" alt="">
+    <img src="./SonhoDourado/carrosel3.png" alt="">
+    <img src="./SonhoDourado/carrosel4.png" alt="">
+    <img src="./SonhoDourado/carrosel5.png" alt="">
 
     <h1>Rota</h1>
     <img src="./imagens geral/Rota.png" alt="">
